@@ -1,0 +1,15 @@
+
+#define COMPILE_IN_SCM_TESTING 
+
+
+
+#ifdef COMPILE_IN_SCM_TESTING
+
+#include <libguile.h>
+
+// return #f on failure
+SCM test_function_chi_angles(SCM scm_in);
+
+
+
+#endif // COMPILE_IN_SCM_TESTING
